# naptha_generate_3d

./: .env.example  output_3d_model.glb  pyproject.toml
generate_3d/: run.py
generate_3d/configs/: deployment.json  llm_configs.json
